--- a/src/index.css
+++ b/src/index.css
@@ -246,6 +246,7 @@ i.fa.fa-times-circle {
 h4.info__day--name {
     font-size: 30px;
     margin-bottom: 10px;
+    color: #979a9c;
 }
 
 .info__items {
@@ -286,10 +287,15 @@ span.item__time {
 span.item__weather {
     width: 80%;
 }
+.week__info{
+    width: 80%;
+    margin: 0 auto;
+}
 .week__wrapper {
     display: flex;
     justify-content: space-between;
-    width: 80%;
+    width: 100%;
+
 }
 
 .week {
@@ -306,4 +312,5 @@ span.item__weather {
 
 .week h3 {
     margin-bottom: 15px;
+    color: #979a9c;
 }
